--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -25,6 +25,7 @@ body {
   font-weight: 400;
   line-height: 24px;
   color: $text;
+  background-color: #f4f6f5;
 }
 .container {
   max-width: 1200px;
