--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,7 +33,7 @@
   margin-left: 7px;
 }
 
-.headr__menu {
+.header__menu {
   background-color: $bg;
 }
 
@@ -106,5 +106,60 @@
       right: 20px;
       top: 16px;
     }
+  }
+}
+
+.gallery {
+  padding-top: 120px;
+}
+
+.gallery__title {
+  color: $bg;
+  font-size: 36px;
+  font-family: "Roboto-Regular", sans-serif;
+  font-weight: 700;
+  text-align: center;
+}
+
+.gallery__menu-list {
+  padding: 60px 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & a {
+    
+    margin-left: 6px;
+    text-decoration: none;
+    box-shadow: 0 2px 5px rgba(202, 215, 228, 0.75);
+    padding: 13px 27px;
+    font-family: "Roboto-Regular", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: #263238;
+    background: #ffffff;
+    transition: 0.5s;
+  }
+}
+
+.gallery__menu-list a:hover,
+.gallery__menu-list .active {
+  background: #e74c3c;
+  color: #ffffff;
+}
+
+.gallery__dashboard{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 30px;
+}
+
+.gallery__item-description {
+  & a{
+    color: #8bc34a;
+    font-size: 14px;
+    font-weight: 500;
   }
 }
