--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -133,17 +133,29 @@
     & + button {
       margin-left: 5px;
     }
+    &.mixitup-control-active {
+      background-color: $red;
+      color: #fff;
+    }
   }
 }
 
-.products__item {
+.products__inner-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.product__item {
   max-width: 442px;
   width: 100%;
+  box-shadow: 0 1px 2px rgba(205, 214, 222, 0.75);
+  margin-bottom: 30px;
   &-img {
     min-height: 250px;
     background-repeat: no-repeat;
     display: block;
-    background-position: center center;
+    background-position: center;
     block-size: cover;
   }
   &-content {
@@ -151,19 +163,70 @@
     justify-content: space-between;
     padding: 10px 30px;
     align-items: center;
+    min-height: 90px;
+    font-weight: 500;
+    border-bottom: 1px solid #e7ecf2;
   }
   &-name {
     max-width: 310px;
   }
   &-title {
     color: $bg;
-    font-weight: 500;
     font-size: 18px;
     display: block;
   }
   &-category {
     display: block;
+    font-size: 14px;
+    color: $green;
+  }
+  &-price {
+    font-size: 20px;
+    color: $bg;
+    font-weight: 700;
+  }
+  &-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 70px;
+    padding: 10px 30px;
+  }
+  &-author {
+    display: flex;
+    align-items: center;
+    .avatar {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-position: center;
+      display: inline-block;
+      background-repeat: no-repeat;
+      box-sizing: cover;
+      margin-right: 14px;
+    }
+    span {
+      font-size: 14px;
+      font-weight: 500;
+    }
   }
 }
 
+.products__bottom-btn {
+  text-align: center;
+  button {
+    margin: 45px 5px 0px;
+    box-shadow: 0 1px 3px rgba(204, 216, 228, 0.75);
+    background-color: #fff;
+    border: none;
+    color: $bg;
+    padding: 20px 30px;
+    font-weight: 500;
+    cursor: pointer;
+    &.mixitup-control-active {
+      background-color: $red;
+      color: #fff;
+    }
+  }
+}
 // end products
