--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -51,4 +51,10 @@ body {
   font-size: 36px;
   line-height: 60px;
   margin-bottom: 30px;
+  text-align: center;
+}
+
+.rate-star{
+  display: inline-block;
+  margin-right: 13px;
 }
