--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -195,6 +195,7 @@
   &-author {
     display: flex;
     align-items: center;
+    max-width: 245px;
     .avatar {
       width: 30px;
       height: 30px;
@@ -208,6 +209,12 @@
     span {
       font-size: 14px;
       font-weight: 500;
+    }
+  }
+  &-star {
+    font-size: 12px;
+    span {
+      color: $bg;
     }
   }
 }
@@ -230,3 +237,40 @@
   }
 }
 // end products
+
+//start products-slider
+.product-slider {
+  padding: 110px 0px 120px;
+  .slick-dots {
+    margin-top: 50px;
+    text-align: center;
+    li {
+      margin-left: 3px;
+      margin-right: 3px;
+      display: inline-block;
+      &.slick-active{
+        button{
+          background-color: $green;
+        }
+      }
+      button {
+        cursor: pointer;
+        border: none;
+        border-radius: 50%;
+        background-color: #e8e8e8;
+        width: 16px;
+        height: 16px;
+        font-size: 0;
+        outline: none;
+      }
+    }
+  }
+}
+
+// end products-slider
+
+
+// start advantages 
+
+
+// end advantages
