--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -25,7 +25,7 @@ body {
   font-weight: 400;
   line-height: 24px;
   color: $text;
-  background-color: #f4f6f5;
+ 
 }
 .container {
   max-width: 1200px;
@@ -47,7 +47,7 @@ body {
 
 .title{
   color:$bg;
-  font-weight: 700;
+  @include f700;
   font-size: 36px;
   line-height: 60px;
   margin-bottom: 30px;
