--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -54,7 +54,7 @@
   a {
     color: #fff;
     font-size: 14px;
-    font-weight: 500;
+   @include f500;
   }
 }
 // end header
@@ -73,14 +73,14 @@
   text-align: center;
   &-title {
     font-size: 48px;
-    font-weight: 700;
+    @include f700;
     margin-bottom: 28px;
     line-height: 72px;
   }
   &-text {
     margin-bottom: 50px;
     font-size: 20px;
-    font-weight: 500;
+    @include f500;
     line-height: 30px;
   }
   &-form {
@@ -95,7 +95,7 @@
       height: 56px;
       border: none;
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
       padding-left: 25px;
       padding-right: 60px;
       &::placeholder {
@@ -164,7 +164,7 @@
     padding: 10px 30px;
     align-items: center;
     min-height: 90px;
-    font-weight: 500;
+    @include f500;
     border-bottom: 1px solid #e7ecf2;
   }
   &-name {
@@ -183,7 +183,7 @@
   &-price {
     font-size: 20px;
     color: $bg;
-    font-weight: 700;
+    @include f700;
   }
   &-info {
     display: flex;
@@ -208,7 +208,7 @@
     }
     span {
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
     }
   }
   &-star {
@@ -228,7 +228,7 @@
     border: none;
     color: $bg;
     padding: 20px 30px;
-    font-weight: 500;
+    @include f500;
     cursor: pointer;
     &.mixitup-control-active {
       background-color: $red;
@@ -248,8 +248,8 @@
       margin-left: 3px;
       margin-right: 3px;
       display: inline-block;
-      &.slick-active{
-        button{
+      &.slick-active {
+        button {
           background-color: $green;
         }
       }
@@ -269,8 +269,79 @@
 
 // end products-slider
 
+// start advantages
 
-// start advantages 
+.advantages{
+  background-color: $bg;
+  padding: 110px 0;
 
+}
 
+.advantages__title{
+  color:#fff;
+  margin-bottom: 80px;
+
+}
+.advantages__inner{
+  display: flex;
+  justify-content: space-between;
+}
+.advantages__item{
+  max-width: 370px;
+  text-align: center;
+  padding: 0 15px;
+  
+  &:hover{
+    .advantages__item-images{
+      background-color: $green;
+
+    }
+    .advantages__item-title{
+      color: $green;
+    }
+    .advantages__item-images{
+      path{
+        fill: white;
+      }
+    }
+  }
+  &-images{
+    width: 114px;
+    height: 114px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 30px;
+    transition: all .5s;
+  }
+  &-title{
+    margin-bottom: 25px;
+    font-size: 24px;
+    color:#fff;
+    @include f500;
+    transition: all .5s;
+  }
+  &-text{
+    color:#b0bec5;
+    font-size: 15px;
+  }
+}
+
+.icosvg-1{
+  svg{
+    width: 50px;
+  }  
+}
+.icosvg-2{
+  svg{
+    width: 70px;
+  }  
+}
+.icosvg-3{
+  svg{
+    width: 86px;
+  }  
+}
 // end advantages
