--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -412,48 +412,162 @@
 // end tutorial
 
 // start footer
-.footer{
+.footer {
   background-color: $bg;
-  &__inner{
+  color: #b7c3c8;
+  &__inner {
     display: flex;
     justify-content: space-between;
     padding: 100px 0px 80px;
   }
 }
 
-.footer__col{
-  max-width: 270px;
-  &-menu{
+.footer__col {
+  max-width: 260px;
+  width: 100%;
+  &-menu {
     max-width: 220px;
   }
-  &-title{
+  &-title {
     font-size: 22px;
-    font-family: 'Raleway', sans-serif;
-    color:#fff; 
+    font-family: "Raleway", sans-serif;
+    color: #fff;
     padding-bottom: 30px;
     margin-bottom: 30px;
     position: relative;
-    &::after{
-      content:'';
+    &::after {
+      content: "";
       position: absolute;
       bottom: 0;
       left: 2px;
       width: 51px;
       height: 3px;
-      background-color:$green;
+      background-color: $green;
     }
+  }
+  &-text {
+    margin-bottom: 30px;
   }
 }
 
-.footer__copy{
+.footer__copy {
   border-top: 1px solid #424d53;
-&-text{
-  text-align: center;
-  color: #919699;
-  min-height: 75px;
-  line-height: 36px;
-  padding: 25px 0;
+  &-text {
+    text-align: center;
+    color: #919699;
+    min-height: 75px;
+    line-height: 36px;
+    padding: 25px 0;
+  }
 }
+.footer__info {
+  margin-top: 18px;
+  color: #fff;
+  padding-left: 30px;
+  position: relative;
+  &::before {
+    position: absolute;
+    left: 0;
+    content: "\f041";
+    font-family: "icomoon";
+    font-size: 18px;
+    color: $green;
+  }
+}
+.footer__info-phone {
+  &::before {
+    position: absolute;
+    content: "\f095";
+  }
+}
+.footer__col-list {
+  a {
+    font-size: 18px;
+    margin-bottom: 15px;
+    padding-left: 22px;
+    position: relative;
+    color: #b7c3c8;
+    &::before {
+      content: "\f105";
+      position: absolute;
+      left: 0;
+      color: $green;
+      font-size: 18px;
+      font-family: "icomoon";
+    }
+  }
+}
+.footer__social-link {
+  margin-bottom: 33px;
+  li {
+    display: inline-block;
+    & + li {
+      margin-left: 7px;
+    }
+  }
+  a {
+    width: 28px;
+    height: 28px;
+    background-image: url(../images/css_sprites.png);
+  }
+}
+.link-facebook {
+  background-position: 0 0;
+}
+
+.link-twitter {
+  background-position: -28px 0;
+}
+.link-youtube {
+  background-position: -56px 0;
+}
+.link-pinterest {
+  background-position: -112px 0;
+}
+.link-likedin {
+  background-position: -84px 0;
+}
+
+.footer__form-title {
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+.footer__form {
+  position: relative;
+  input {
+    border: none;
+    background-color: #2f3c43;
+    color:#fff;
+    display: block;
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    padding-left: 13px;
+    padding-right: 50px;
+    &::placeholder {
+      color: #697378;
+    }
+  }
+  button{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: $green;
+    border:none;
+    height: 40px;
+    width: 43px;
+    cursor: pointer;
+    &::before{
+      content:"\f124";
+      position: absolute;
+      font-family: 'icomoon';
+      font-size: 20px;
+      color:#fff;
+      top: 11px;
+      left: 13px;
+    }
+  }
 }
 
 // end footer
