--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -33,7 +33,18 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.icon-search:before {
+  content: "\f002";
+}
+.icon-envelope-o:before {
+  content: "\f003";
+}
+.icon-th-large:before {
+  content: "\f009";
+}
+.icon-th-list:before {
+  content: "\f00b";
+}
 .icon-map-marker:before {
   content: "\f041";
 }
@@ -42,6 +53,15 @@
 }
 .icon-phone:before {
   content: "\f095";
+}
+.icon-bell-o:before {
+  content: "\f0a2";
+}
+.icon-sort:before {
+  content: "\f0dc";
+}
+.icon-unsorted:before {
+  content: "\f0dc";
 }
 .icon-bolt:before {
   content: "\f0e7";
@@ -54,4 +74,10 @@
 }
 .icon-location-arrow:before {
   content: "\f124";
+}
+.icon-sort-amount-asc:before {
+  content: "\f160";
+}
+.icon-sort-amount-desc:before {
+  content: "\f161";
 }
