--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,10 @@ html {
 *::after {
   box-sizing: inherit;
 }
+html,
+body {
+  height: 100%;
+}
 
 a {
   display: inline-block;
@@ -25,7 +29,18 @@ body {
   font-weight: 400;
   line-height: 24px;
   color: $text;
- 
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex: 0 0 auto;
 }
 .container {
   max-width: 1200px;
@@ -33,20 +48,24 @@ body {
   padding: 0 15px;
 }
 
-.container-fluid{
+.container-fluid {
   max-width: 100%;
   margin: 0 auto;
   padding: 0 30px;
 }
 
-@media(max-width:720px){
-  .container-fluid{
+@media (max-width: 720px) {
+  .container-fluid {
     padding: 0 15px;
   }
 }
 
-.title{
-  color:$bg;
+.page-content{
+  background-color: $grey;
+}
+
+.title {
+  color: $bg;
   @include f700;
   font-size: 36px;
   line-height: 60px;
@@ -54,7 +73,37 @@ body {
   text-align: center;
 }
 
-.rate-star{
+.rate-star {
   display: inline-block;
   margin-right: 13px;
+}
+.breadcrumbs {
+  &__inner {
+    padding: 45px 0px 40px;
+  }
+  &__list {
+    li {
+      display: inline-block;
+      position: relative;
+
+      & + li {
+        padding-left: 24px;
+        &::before {
+          content: "-";
+          position: absolute;
+          left: 8px;
+          color: $green;
+        }
+      }
+      &:last-child{
+        a,span{
+          color:$bg; 
+        }
+      }
+    }
+    a {
+      color: #b0bec5;
+    }
+    
+  }
 }
