--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -65,6 +65,15 @@
   background-size: cover;
   background-position: center;
   min-height: 532px;
+  &.page-search {
+    min-height: 230px;
+    .search__inner {
+      padding: 55px 0 70px;
+      &-text {
+        margin-bottom: 20px;
+      }
+    }
+  }
 }
 
 .search__inner {
@@ -538,7 +547,7 @@
   input {
     border: none;
     background-color: #2f3c43;
-    color:#fff;
+    color: #fff;
     display: block;
     width: 100%;
     height: 40px;
@@ -549,21 +558,21 @@
       color: #697378;
     }
   }
-  button{
+  button {
     position: absolute;
     bottom: 0;
     right: 0;
     background-color: $green;
-    border:none;
+    border: none;
     height: 40px;
     width: 43px;
     cursor: pointer;
-    &::before{
-      content:"\f124";
+    &::before {
+      content: "\f124";
       position: absolute;
-      font-family: 'icomoon';
+      font-family: "icomoon";
       font-size: 20px;
-      color:#fff;
+      color: #fff;
       top: 11px;
       left: 13px;
     }
@@ -571,3 +580,156 @@
 }
 
 // end footer
+
+// start producr-page
+
+.product-page__inner {
+  display: flex;
+}
+.product-page__aside {
+  margin-right: 30px;
+}
+.aside__item {
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  padding: 0px 32px 32px;
+  margin-bottom: 30px;
+  width: 270px;
+}
+.aside__title {
+  border-bottom: 1px solid #dde3e8;
+  color: $bg;
+  font-size: 20px;
+  @include f700;
+  padding-top: 22px;
+  padding-bottom: 19px;
+}
+.category__list {
+  padding-top: 10px;
+  li {
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 20px;
+    &::before {
+      content: "\f105";
+      position: absolute;
+      left: 0;
+      color: $green;
+      font-size: 18px;
+      font-family: "icomoon";
+    }
+  }
+  a {
+    color: $bg;
+  }
+  span {
+    color: #90a4ae;
+    margin-left: 10px;
+  }
+}
+.price-range {
+  form {
+    padding-top: 20px;
+    padding-bottom: 25px;
+  }
+  button {
+    margin-top: 55px;
+    padding: 15px 10px;
+    background-color: $green;
+    text-align: center;
+    color: #fff;
+    @include f500;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    border: none;
+    position: relative;
+    &::before {
+      content: "\f002";
+      position: absolute;
+      left: 58px;
+      top: 15px;
+      color: #fff;
+      font-size: 15px;
+      font-family: "icomoon";
+    }
+  }
+}
+.irs-min,
+.irs-max,
+.irs--flat .irs-from:before,
+.irs--flat .irs-single:before,
+.irs--flat .irs-to:before,
+.irs--flat .irs-handle > i:first-child {
+  display: none;
+}
+.irs--flat .irs-line {
+  background-color: #f2f5f8;
+  height: 5px;
+}
+.irs--flat .irs-bar {
+  background-color: #37474f;
+  height: 5px;
+}
+.irs--flat .irs-handle {
+  width: 16px;
+  height: 16px;
+  border: 3px solid $green;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 19px;
+}
+
+.irs--flat .irs-handle.state_hover > i:first-child,
+.irs--flat .irs-handle:hover > i:first-child {
+  background-color: $green;
+}
+.irs-from,
+.irs-single,
+.irs-to {
+  top: 45px;
+}
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+  color: #78909c;
+  font-size: 15px;
+  line-height: 1.333;
+  text-shadow: none;
+  padding: 0;
+  background-color: transparent;
+  border-radius: 0px;
+}
+.product-page__aside {
+  .product__item-img {
+    min-height: 120px;
+  }
+  .product__item {
+    box-shadow: none;
+    &-content {
+      padding: 0;
+      border-bottom: none;
+      min-height: 75px;
+    }
+    &-info {
+      padding: 0;
+      min-height: 0;
+    }
+    &-title {
+      font-size: 16px;
+    }
+    &-price {
+      font-size: 16px;
+    }
+    &-starnum {
+      display: none;
+      rate-star {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+// end product-page
