--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -206,7 +206,7 @@
     align-items: center;
     max-width: 245px;
     .avatar {
-      width: 30px;
+      min-width: 30px;
       height: 30px;
       border-radius: 50%;
       background-position: center;
@@ -585,6 +585,7 @@
 
 .product-page__inner {
   display: flex;
+  padding-bottom: 110px;
 }
 .product-page__aside {
   margin-right: 30px;
@@ -707,29 +708,146 @@
     min-height: 120px;
   }
   .product__item {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #dde3e8;
     box-shadow: none;
-    &-content {
+    .product__item-content {
       padding: 0;
       border-bottom: none;
       min-height: 75px;
     }
-    &-info {
+    .product__item-info {
       padding: 0;
       min-height: 0;
     }
-    &-title {
+    .product__item-title {
       font-size: 16px;
     }
-    &-price {
+    .product__item-price {
       font-size: 16px;
     }
-    &-starnum {
+    .product__item-starnum {
       display: none;
-      rate-star {
-        margin-right: 0;
-      }
+    }
+  }
+  .rate-star {
+    margin-right: 0;
+  }
+  .product__item-author .avatar {
+    margin-right: 9px;
+  }
+  .jq-ry-container {
+    padding: 0;
+  }
+}
+.aside__product-item {
+  .product__item:last-child {
+    border: none;
+    padding-bottom: 0;
+  }
+  .product__item:first-child {
+    margin-top: 25px;
+  }
+}
+.top-sellers__link {
+  padding: 16px 10px;
+  display: block;
+  background-color: $green;
+  @include f500;
+  text-align: center;
+  color: #fff;
+}
+.product-page__filter {
+  background-color: #fff;
+  border: 1px solid #dedede;
+  padding: 0px 20px;
+  margin-bottom: 30px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  button {
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 16px;
+    border: none;
+    color: #90a4ae;
+    &.active {
+      color: $green;
     }
   }
 }
+.product-page__filter-sort {
+  color: #707070;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+button.icon-sort-amount-desc {
+  font-size: 18px;
+  color: #455a64;
+}
+button.icon-unsorted {
+  font-size: 14px;
+  color: #707070;
+}
+.product-page__content {
+  width: 100%;
+  .product__item {
+    background-color: #fff;
+    max-width: 270px;
+  }
+  .product__item-img {
+    min-height: 180px;
+  }
+  .product__item-content {
+    padding: 10px 20px;
+  }
+  .product__item-title {
+    font-size: 16px;
+  }
+  .product__item-info {
+    min-height: 65px;
+    padding: 10px 20px;
+  }
+  .rate-star {
+    margin-right: 5px;
+  }
+  .jq-ry-container {
+    padding: 0;
+  }
+}
+.product-page__items {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  flex-wrap:wrap;
+}
 
+.pagination__list {
+  li {
+    display: inline-block;
+    & + li {
+      margin-left: 6px;
+    }
+  }
+  a,span{
+    box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+    width: 43px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    font-size: 16px;
+    color:$bg;
+    @include f500;
+    &.active{
+      background-color: $red;
+      color:#fff;
+
+    }
+  }
+}
 // end product-page
