--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -165,7 +165,7 @@
     background-repeat: no-repeat;
     display: block;
     background-position: center;
-    block-size: cover;
+    background-size: cover;
   }
   &-content {
     display: flex;
@@ -773,6 +773,7 @@
     font-size: 16px;
     border: none;
     color: #90a4ae;
+    outline: none;
     &.active {
       color: $green;
     }
@@ -797,6 +798,7 @@ button.icon-unsorted {
   .product__item {
     background-color: #fff;
     max-width: 270px;
+    transition: all .5s;
   }
   .product__item-img {
     min-height: 180px;
@@ -847,6 +849,21 @@ button.icon-unsorted {
       background-color: $red;
       color:#fff;
 
+    }
+  }
+}
+.product__item-text{
+  display: none;
+}
+.product__item{
+  &.list{
+    max-width: 100%;
+    .product__item-img{
+      float: left;
+      width: 240px;
+    }
+    .product__item-text{
+      display: block;
     }
   }
 }
