--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,7 +29,8 @@
   background-color: $green;
 }
 
-.header__btn-register {
+.header__btn-register,
+.header__btn-logout {
   background-color: $red;
   margin-left: 7px;
 }
@@ -57,6 +58,260 @@
     @include f500;
   }
 }
+.header__circle {
+  &.active {
+    display: block;
+  }
+  display: none;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #a0a0a0;
+    font-size: 14px;
+  }
+  span {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 18px;
+    right: -7px;
+    top: -7px;
+    color: #fff;
+    font-size: 11px;
+  }
+}
+.header__box {
+  display: flex;
+  align-items: center;
+}
+.notification {
+  span {
+    background-color: $yellow;
+  }
+}
+.messege {
+  span {
+    background-color: $orange;
+  }
+}
+.basket {
+  span {
+    background-color: $green;
+  }
+}
+.header__btn-login--off {
+  display: none;
+}
+.header__btn-logout {
+  display: none;
+  &.header__btn-login--on {
+    display: block;
+  }
+}
+.user__box,
+.basket__box,
+.notification__box,
+.messege__box {
+  position: relative;
+  height: 89px;
+  margin-top: 40px;
+  &:hover {
+    .user__menu {
+      height: auto;
+      border-width: 1px;
+      padding: 20px;
+      overflow: auto;
+    }
+  }
+}
+.user {
+  margin-left: 20px;
+  margin-right: 25px;
+  padding-right: 20px;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "\f107";
+    font-family: "icomoon";
+    font-size: 16px;
+    top: 0;
+    right: 0;
+    color: #707070;
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+  }
+  &__images {
+    margin-right: 15px;
+    width: 34px;
+    height: 34px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  &__info {
+    line-height: 24px;
+    font-size: 14px;
+  }
+  &__name {
+    @include f500;
+    color: #222;
+  }
+  &__money {
+    color: $green;
+    @include f700;
+  }
+}
+.user__menu {
+  top: 69px;
+  left: 20px;
+  border: 0px solid rgb(204, 204, 204);
+  position: absolute;
+  background-color: #fff;
+  padding: 0 20px;
+  width: 158px;
+  transition: all 0.3s;
+  height: 0;
+  overflow: hidden;
+
+  a {
+    font-size: 12px;
+    color: #546e7a;
+    margin-bottom: 15px;
+  }
+}
+.circle__menu {
+  position: absolute;
+  top: 61px;
+  right: 0;
+  height: 0;
+  overflow: hidden;
+  border-top: 1px solid #e0e0e0;
+  transition: all 0.3s;
+}
+.basket__box,
+.notification__box,
+.messege__box {
+  margin-top: 54px;
+  margin-left: 15px;
+  &:hover {
+    .header__circle::before{
+      color:$bg;
+    }
+    .circle__menu {
+      overflow: hidden;
+      height: auto;
+    }
+    .circle__item{
+      padding: 23px;
+      border-width: 1px;
+    }
+  }
+}
+.circle__item {
+  background-color: #fff;
+  padding: 0 23px;
+  border: 0px solid #e0e0e0;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-top: none;
+  display: flex;
+  align-items: center;
+  width: 268px;
+  position: relative;
+  transition: all 0.3s;
+
+  &:before {
+    position: absolute;
+    top: 27px;
+    right: 28px;
+    color: #b0bec5;
+    font-size: 16px;
+  }
+}
+.circle__images {
+  margin-right: 15px;
+}
+.circle__info {
+  line-height: 23px;
+  &-name {
+    color: $bg;
+    @include f500;
+  }
+  &-thema {
+    color: $green;
+    font-size: 12px;
+  }
+  &-price {
+    color: #000;
+    font-size: 16px;
+    @include f500;
+  }
+  &-date {
+    color: #90a4ae;
+    font-size: 10px;
+  }
+}
+.basket__summ {
+  padding: 16px 17px 12px;
+  border: 1px solid #e0e0e0;
+  border-top: none;
+  background-color: #fff;
+}
+.basket__title {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 13px;
+  padding-right: 22px;
+  @include f700;
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: $bg;
+}
+.basket__btn {
+  @include f700;
+  color: #fff;
+  background-color: $green;
+  padding: 12px 5px;
+  width: 100px;
+  text-align: center;
+  &-checkout {
+    background-color: $orange;
+    width: 120px;
+    margin-left: 6px;
+  }
+}
+.notification__menu,
+.messege__menu {
+  .circle__images {
+    width: 48px;
+    height: 48px;
+    margin-right: 28px;
+    border-radius: 50%;
+  }
+  .circle__info {
+    line-height: 18px;
+    &-name {
+      font-size: 12px;
+    }
+    &-thema {
+      font-size: 11px;
+    }
+  }
+}
+.icons-color::before {
+  color: $orange;
+}
+
 // end header
 
 // start search
