--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -608,6 +608,7 @@
 //start products-slider
 .product-slider {
   padding: 110px 0px 120px;
+  background-color: #fff;
   .slick-dots {
     margin-top: 50px;
     text-align: center;
@@ -1628,5 +1629,180 @@ button.icon-unsorted {
   color: #707070;
 }
 // end about
+
+// start page 404
+.page-404__wrapper,
+.contact__wrapper {
+  border: 1px solid #d7d7d7;
+  background-color: #fff;
+  margin-bottom: 150px;
+}
+.page-404__head,
+.contact__head {
+  font-size: 24px;
+  color: #444;
+  @include f500;
+  padding: 23px 27px;
+  border-bottom: 1px solid #d7d7d7;
+}
+.page-404__inner {
+  text-align: center;
+  background-color: $green;
+  color: #fff;
+}
+.page-404__404 {
+  font-size: 300px;
+  font-weight: 800;
+  font-family: "Open Sans", sans-serif;
+  padding-top: 90px;
+  padding-bottom: 50px;
+  line-height: 300px;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url(../images/page404.png);
+    width: 150px;
+    height: 292px;
+    margin-left: 20px;
+  }
+}
+.page-404__title {
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-size: 30px;
+  letter-spacing: 6px;
+  line-height: 34px;
+  padding: 0px 16px 33px 6px;
+}
+.page-404__text {
+  font-size: 18px;
+  max-width: 501px;
+  margin: 0 auto;
+  padding-bottom: 60px;
+}
+.page-404__link {
+  a {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 20px 30px 16px;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    margin-bottom: 100px;
+  }
+}
+// end page 404
+
+// start contact
+.contact__head {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.contact__inner {
+  padding: 35px 40px 15px;
+}
+.contact__map {
+  margin-bottom: 50px;
+  iframe {
+    width: 100%;
+    height: 415px;
+  }
+}
+.contact__box {
+  display: flex;
+}
+.contact__info {
+  margin-right: 30px;
+  max-width: 330px;
+  width: 100%;
+}
+.contact__info-item {
+  margin-bottom: 30px;
+}
+.contact__info-title {
+  padding-bottom: 20px;
+  position: relative;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 700;
+  color: $bg;
+  padding-left: 40px;
+  margin-bottom: 20px;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 44px;
+    height: 4px;
+    background-color: $green;
+    left: 40px;
+    bottom: 0;
+  }
+  &::before {
+    color: $green;
+    font-family: "icomoon";
+    font-size: 24px;
+    position: absolute;
+    left: 0;
+  }
+}
+.contact__info-content {
+  padding-left: 40px;
+  color: #707070;
+  max-width: 230px;
+}
+.contact__form-title {
+  font-size: 24px;
+  color: #333;
+  @include f500;
+  margin-bottom: 23px;
+}
+.contact__form-row {
+  display: flex;
+  justify-content: space-between;
+}
+.contact__form {
+  width: 100%;
+  input {
+    border: none;
+    height: 43px;
+    padding-left: 17px;
+    padding-right: 17px;
+    background-color: #f1f4f5;
+    width: 350px;
+    display: block;
+    margin-bottom: 30px;
+    &::placeholder {
+      color: #7a7a7a;
+      font-size: 15px;
+    }
+  }
+  textarea {
+    border: none;
+    padding: 13px 17px;
+    height: 190px;
+    background-color: #f1f4f5;
+    width: 100%;
+    display: block;
+    resize: none;
+    margin-bottom: 23px;
+    &::placeholder {
+      color: #7a7a7a;
+      font-size: 15px;
+    }
+  }
+  button {
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    background-color: $green;
+    @include f700;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 21px 35px;
+    width: 190px;
+  }
+}
+// end contact
 
 @import "media";
