--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -87,6 +87,8 @@ body {
 .breadcrumbs {
   &__inner {
     padding: 45px 0px 40px;
+    overflow: hidden;
+    width: 1200px;
   }
   &__list {
     li {
@@ -125,4 +127,7 @@ body {
     color:$green;
     font-size: 14px;
   }
+}
+#modal{
+  display: none;
 }
