--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,9 +1,21 @@
 // @import "vars";
 // @import "global";
 // @import "fonts";
+@media (max-width: 1400px) {
+  .products .product__item {
+    flex-basis: calc(33.3333%-30px);
+  }
+}
 @media (max-width: 1200px) {
-  .withdrawals__inner {
+  .withdrawals__inner,
+  .product-page__inner {
+    .aside__item {
+      width: 100%;
+    }
     display: block;
+  }
+  .top-sellers.aside__item {
+    display: none;
   }
   .withdrawals__col {
     max-width: 100%;
@@ -12,9 +24,38 @@
   .withdrawals__content-item {
     max-width: 490px;
   }
+  .contact__form-row {
+    display: block;
+  }
+  .contact__form input {
+    width: 100%;
+  }
+  .product-card__inner {
+    display: block;
+    .aside__item {
+      width: 100%;
+    }
+  }
+  .product-card__content {
+    max-width: 100%;
+    margin-right: 0;
+  }
+  .product-card__images {
+    max-width: 100%;
+  }
+  .product-page__aside {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 1150px) {
+  .products .product__item {
+    flex-basis: calc(50%-30px);
+    max-width: 100%;
+  }
+  .product__item-img {
+    min-height: 225px;
+  }
   .footer__inner {
     flex-wrap: wrap;
     margin: 0px 15px;
@@ -31,6 +72,15 @@
   .notification__box,
   .messege__box {
     z-index: 1;
+  }
+}
+@media (max-width: 1020px) {
+  .personal-info__tabs.settings__tabs {
+    display: block;
+  }
+  .personal-info__tabs.settings__tabs .tabs {
+    margin-bottom: 20px;
+    max-width: 100%;
   }
 }
 @media (max-width: 960px) {
@@ -90,6 +140,61 @@
       margin-left: 40px;
     }
   }
+  .upload-line {
+    display: block;
+    label {
+      display: inline-block;
+      margin-bottom: 5px;
+    }
+  }
+  .upload__inner button {
+    margin-left: 0;
+  }
+  .contact__box {
+    display: block;
+  }
+  .profile__inner {
+    flex-direction: column;
+  }
+  .profile__content {
+    order: -1;
+    margin-bottom: 20px;
+  }
+  .product-page__content .product__item {
+    flex-basis: calc(50% - 20px);
+    margin-left: 20px;
+    margin-bottom: 20px;
+  }
+  .product-page__items {
+    margin-left: -20px;
+  }
+  .product__item.list {
+    flex-basis: 100%;
+  }
+  .search__inner-title {
+    line-height: 40px;
+    font-size: 35px;
+  }
+  .profile__aside {
+    max-width: 100%;
+    .aside__item {
+      width: 100%;
+    }
+  }
+  .profile__aside-btn {
+    width: 300px;
+  }
+}
+@media (max-width: 840px) {
+  .product-card__box {
+    display: block;
+  }
+  .product-card__link {
+    margin-bottom: 20px;
+  }
+  .icon-th-list {
+    display: none;
+  }
 }
 @media (max-width: 740px) {
   .page-404__404 {
@@ -102,6 +207,12 @@
     margin-bottom: 80px;
   }
 }
+@media (max-width: 700px) {
+  .products .product__item  {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
 
 @media (max-width: 640px) {
   .notification__box,
@@ -110,6 +221,101 @@
   }
   .circle__menu {
     right: auto;
+  }
+  .profile__banner-images {
+    min-height: 245px;
+  }
+  .profile__items {
+    display: block;
+  }
+  .profile__item {
+    width: 100%;
+  }
+  .profile__item + .profile__item {
+    border-top: 1px solid #ddd;
+    border-left: none;
+  }
+  .profile__banner {
+    margin-bottom: 20px;
+  }
+  .product-page__content .product__item {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+  .products__inner-btn button {
+    width: 100%;
+    & + button {
+      margin-left: 0;
+    }
+  }
+}
+@media (max-width: 600px) {
+  .upload__inner-content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .upload__inner-title {
+    padding: 16px 10px 18px;
+  }
+  .personal__line {
+    display: block;
+    label {
+      display: inline-block;
+      margin-bottom: 5px;
+    }
+  }
+  .page-box__content {
+    padding: 20px 10px 50px;
+  }
+  .page-box__title {
+    padding: 18px 10px;
+  }
+  .contact__inner {
+    padding: 35px 10px 15px;
+  }
+  .contact__head {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .container {
+    padding: 0px 8px;
+  }
+  .contact__map iframe {
+    height: 300px;
+  }
+  .personal-box {
+    padding: 35px 10px 25px;
+  }
+  .profile__aside-btn {
+    width: 280px;
+  }
+  .product-card__tabs {
+    .tabs {
+      display: block;
+      .tab {
+        display: block;
+        & + .tab {
+          border-top: 1px solid #d7d7d7;
+          border-left: none;
+        }
+      }
+    }
+  }
+  .tab-items__list {
+    column-count: 1;
+    column-gap: 0;
+  }
+  .product-card__link {
+    a {
+      width: 100%;
+      margin-bottom: 15px;
+      & + a {
+        margin-left: 0;
+      }
+    }
+  }
+  .product-card__images {
+    max-width: 100%;
   }
 }
 
@@ -157,6 +363,21 @@
     margin-bottom: 60px;
   }
   .about-page__text {
+    padding: 20px;
+  }
+  .product-card__more-icon.productmini {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .product-card__tabs {
+    margin-bottom: 25px;
+  }
+  .tabs {
+    .tab {
+      padding: 10px 0;
+    }
+  }
+  .tab_content {
     padding: 20px;
   }
 }
