--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -517,7 +517,7 @@
   flex-wrap: wrap;
 }
 .products .product__item {
-  flex-basis: calc(25%-30px);
+  flex-basis: calc(25% - 30px);
   margin-left: 30px;
 }
 
