--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -526,13 +526,16 @@
   width: 100%;
   box-shadow: 0 1px 2px rgba(205, 214, 222, 0.75);
   margin-bottom: 30px;
+  position: relative;
   &-img {
     min-height: 250px;
     background-repeat: no-repeat;
     display: block;
     background-position: center;
     background-size: cover;
+    
   }
+  
   &-content {
     display: flex;
     justify-content: space-between;
